syntax = "proto3";

package product;

option go_package = "../pb;pb";

import "product_model.proto";

service ProductService {
    rpc GetProduct (ProductRequest) returns (ProductList) {}
    rpc GetProductStream (ProductRequest) returns (stream ProductResponse) {}
}


